# numcxx

./: .hgignore  CHANGELOG.txt  CMakeLists.txt  Doxyfile  INSTALL.md  LICENSE  Makefile  Makefile.inc  README.md
cmake/: Doxyfile.in  FindUMFPACK.cmake  NUMCXXConfig.cmake.in  NUMCXXConfigVersion.cmake.in  numcxx-build  numcxx-build.in  numcxx-config.in  numcxx-config.sh.in
devel/: GNUmakefile  Makefile  featuretest.cxx  plot.py  test-et.cxx  test-numcxx.cxx  test-numcxx.py  test-numcxx3.cxx  test-sparse.cxx  test-triangle.cxx
doc/: Doxyfile.in  DoxygenLayout.xml  installation.md  intro.md
examples/: CMakeLists.txt  numcxx-expressions.cxx  numcxx-ref.cxx  numcxx-sharedptr.cxx
examples/00-cxx-basics/: 00-hello-world.cxx  01-c-style-stack.cxx  02-c-style-heap.cxx  03-cxx-style-ref.cxx  04-cxx-style-sharedptr.cxx  05-cxx-style-sharedptr2.cxx  README
examples/10-numcxx-basics/: 10-numcxx-expressions.cxx  11-numcxx-ref.cxx  12-numcxx-sharedptr.cxx  13-numcxx-lapack.cxx  14-numcxx-lapack-sharedptr.cxx  15-numcxx-umfpack.cxx  16-numcxx-umfpack-sharedptr.cxx  17-numcxx-cg.cxx  CMakeLists.txt  README
examples/20-numcxx-graphics/: 20-numcxx-matplotlib.cxx  20-numcxx-matplotlib.py  21-numcxx-vtkfigrect1D.cxx  22-numcxx-vtkfigrect2D.cxx  23-numcxx-vtkfigrect3D.cxx
examples/30-numcxx-tri/: 30-triangle.cxx  31-cut.cxx
examples/40-numcxx-pde/: 40-stationary-heat-fe.cxx  40-stationary-heat.cxx  41-stationary-heat-fv.cxx  42-convtest-fem-sin.cxx  43-convtest-fvm-sin.cxx  44-transient-heat-fe.cxx  44a-transient-heat-fv.cxx  45-convdiff1d.cxx  46-nonlin-fvm.cxx  47-convtest-fem-jacobi.cxx  48-convtest-fem-ilu.cxx  49-reentrant.cxx
examples/50-numcxx-pde/: 50-minmax-fem.cxx  51-minmax-fvm.cxx  55-mg.cxx
examples/cxx-basics/: 01-c-style-stack.cxx  02-c-style-heap.cxx  03-cxx-style-ref.cxx  04-cxx-style-sharedptr.cxx  05-cxx-style-sharedptr2.cxx  CMakeLists.txt  README
examples/numcxx-basics/: README  numcxx-expressions.cxx  numcxx-ref.cxx  numcxx-sharedptr.cxx
examples/part1/: GNUmakefile  Makefile  README  c-style-heap.cxx  c-style-stack.cxx  cxx-style-ref.cxx  cxx-style-sharedptr.cxx
examples/part2/: GNUmakefile  Makefile  test-dataout.cxx  test-solver.cxx
examples/part3/: GNUmakefile  Makefile  basel.cxx  macheps.cxx  test-lapack.cxx  test-umfpack.cxx
examples/part4/: GNUmakefile  featuretest.py  mymodule.h  mymodule.hxx  mymodule.i  test-mymodule.py  test-numcxx.py  test-triangle.py
examples/part5/: GNUmakefile  fem2d.hxx  fem2d.i  test-btchange.py  test-convergence.py  test-fem2d-convergence.py  test-fem2d.py  test-general-fem2d.cxx  test-general-fem2d.py  test-heatsource.py  test-reentrant.py  test-transient-heatsource.py  test-transient.py  test-varkappa.py
examples/part6/: GNUmakefile  convdiff.hxx  convdiff.i  fvm2d.hxx  fvm2d.i  test-convdiff.py  test-fvm2d-convergence.py  test-fvm2d.py  test-general-fvm.py  test-nonlinear.py
examples/part7/: GNUmakefile  cpp11mutex.cxx  cpp11threads.cxx  cppomp-critical.cxx  cppomp.cxx  grayscott.html  index.html  mpi-hello.cxx  mpi-sum.cxx  omp-scalpro-critical.cxx  omp-scalpro-reduction.cxx  omp-scalpro-wrong.cxx  pthreads.c
include/: CMakeLists.txt
include/netlib/: CMakeLists.txt  bicgstab.hxx  cg.hxx  netlib.hxx
include/numcxx/: CMakeLists.txt  expression.hxx  expression.ixx  fem2d.hxx  fvm2d.hxx  geometry.hxx  numcxx.hxx  numcxx.i  simplegrid.hxx  simplegrid.ixx  tarray-def.hxx  tarray-imp.hxx  tarray.hxx  tarray.ixx  tarray1-def.hxx  tarray1-imp.hxx  tarray1.hxx  tarray1.ixx  tarray2-def.hxx  tarray2-imp.hxx  tarray2.hxx  tarray2.ixx  tmatrix-def.hxx  tmatrix-imp.hxx  tmatrix.hxx  tmatrix.ixx  tprecon-ilu.hxx  tprecon-ilu.ixx  tprecon-jacobi.hxx  tprecon-jacobi.ixx  tsolver-lapacklu.hxx  tsolver-lapacklu.ixx  tsolver-umfpack.hxx  tsolver-umfpack.ixx  tsolverlapacklu-imp.hxx  tsolverlapacklu.hxx  tsparsematrix-imp.hxx  tsparsematrix.hxx  tsparsematrix.ixx  util.hxx  (+2 more)
python/numcxx/: GNUmakefile  __init__.py  numcxxplot.py  plot.py
pytools/: find_python_paths.py  numcxx.i  numpy.i
src/: CMakeLists.txt  GNUmakefile  Makefile  __init__.py  find_python_paths.py  numcxx.h  numcxx.hxx  numcxx.i  numcxx_wrap.cxx  test-numcxx.cxx  test-numcxx.py
src/numcxx/: .#tmatrix.cxx  CMakeLists.txt  fem2d.cxx  fvm2d.cxx  numcxx.i  simplegrid.cxx  tarray-def.hxx  tarray1.hxx  tarray2-def.hxx
test/: Makefile  featuretest.cxx  test-et.cxx  test-numcxx.cxx  test-numcxx2.cxx  test-numcxx3.cxx  test-sparse.cxx
tests/: CMakeLists.txt  test-expressions.cxx  test-jacobi.cxx  test-lapack.cxx  test-umfpack.cxx
