install(FILES
  expression.ixx
  geometry.hxx
  numcxx.hxx
  simplegrid.hxx
  tarray1.hxx
  tarray2.hxx
  tarray.hxx
  tarray.ixx
  tmatrix.hxx
  tmatrix.ixx
  tprecon-jacobi.hxx
  tprecon-jacobi.ixx
  tprecon-ilu.hxx
  tprecon-ilu.ixx
  tsolver-lapacklu.hxx
  tsolver-lapacklu.ixx
  tsolver-umfpack.hxx
  tsolver-umfpack.ixx
  tsparsematrix.hxx
  tsparsematrix.ixx
  util.hxx
  util.ixx
  fem2d.hxx
  fvm2d.hxx
  vtkfig-simplegrid.hxx
  DESTINATION include/numcxx
)

